test/files/neg/with-outside-for.scala

object O {
	with 3
}
